src/objects/Email_Tracking__c.object
<CustomObject>
    <description>This object is created to track emails on Opportunities</description>
    <fields>
        <fullName>Attachment_Link__c</fullName>
        <formula>IF(AND(Attachment__c&lt;&gt;null,Attachment__c&lt;&gt;&apos;&apos;), HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+Attachment__c,&quot;Sent/Reply Attachment&quot;,&quot;_parent&quot; ), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachment Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <description>This field is used to store the attachment id</description>
        <label>Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Attachment_Content__c</fullName>
        <label>Email Attachment Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email_Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Message_Type__c</fullName>
        <label>Email Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Email</fullName>
                </value>
                <value>
                    <fullName>Mass Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent Email</fullName>
                </value>
                <value>
                    <fullName>Replied Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Type__c</fullName>
        <label>Email Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Email</fullName>
                </value>
                <value>
                    <fullName>Work Email</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_mess__c</fullName>
        <label>Email Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Email</fullName>
                </value>
                <value>
                    <fullName>Mass Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Email Trackings</relationshipLabel>
        <relationshipName>Email_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReplyEmailContenetPdf__c</fullName>
        <label>ReplyEmailContenetPdf</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyEmailContentPdfName__c</fullName>
        <label>ReplyEmailContentPdfName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyEmailContentPdf__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+ReplyEmailContenetPdf__c,&quot;Reply Pdf&quot;,&quot;_parent&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReplyEmailContentPdf</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Email Trackings</relationshipLabel>
        <relationshipName>Email_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Email Tracking</label>
    <nameField>
        <displayFormat>ETOP-{0000}</displayFormat>
        <label>Email Tracking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>